# JeffAudioPlayer

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jeffmony/audioplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jeffmony/audioplayer/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jeffmony/audioplayer/: ExampleUnitTest.java
audiolibrary/: build.gradle
audiolibrary/src/androidTest/java/com/jeffmony/audiolibrary/: ExampleInstrumentedTest.java
audiolibrary/src/main/: AndroidManifest.xml
audiolibrary/src/main/cpp/: CMakeLists.txt  audio_player.cc  audio_player.h  common.h  log.h
audiolibrary/src/main/cpp/decode/: audio_decoder.cc  audio_decoder.h
audiolibrary/src/main/cpp/error/: error.cc  error.h
audiolibrary/src/main/cpp/jni/: audio_env.c  audio_env.h  audio_jni.cc
audiolibrary/src/main/cpp/message/: handler.cc  handler.h  message_queue.cc  message_queue.h
audiolibrary/src/main/cpp/opensl/: audio_renderer.cc  audio_renderer.h
audiolibrary/src/main/cpp/queue/: buffer_queue.cc  buffer_queue.h
audiolibrary/src/main/cpp/sonic/: sonic.c  sonic.h
audiolibrary/src/main/java/com/jeffmony/audiolibrary/: AudioPlayer.java  IAudioPlayer.java
audiolibrary/src/main/java/com/jeffmony/audiolibrary/listener/: OnErrorListener.java  OnPlayerStateListener.java  OnPreparedListener.java
audiolibrary/src/main/java/com/jeffmony/audiolibrary/utils/: LogUtils.java  TimeUtils.java
audiolibrary/src/test/java/com/jeffmony/audiolibrary/: ExampleUnitTest.java
extra/soundtouch/include/: SoundTouch.h
gradle/wrapper/: gradle-wrapper.properties
